2018.2/_sources/plugins/available/sample-classifier/maturity-index.txt
maturity-index: Microbial maturity index prediction.
====================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime sample-classifier maturity-index [OPTIONS]

     Calculates a "microbial maturity" index from a regression model trained on
     feature data to predict a given continuous metadata column, e.g., to
     predict age as a function of microbiota composition. The model is trained
     on a subset of control group samples, then predicts the column value for
     all samples. This visualization computes maturity index z-scores to
     compare relative "maturity" between each group, as described in
     doi:10.1038/nature13421. This method can be used to predict between-group
     differences in relative trajectory across any type of continuous metadata
     gradient, e.g., intestinal microbiome development by age, microbial
     succession during wine fermentation, or microbial community differences
     along environmental gradients, as a function of two or more different
     "treatment" groups.

   Options:
     --i-table ARTIFACT PATH FeatureTable[Frequency]
                                     Feature table containing all features that
                                     should be used for target prediction.
                                     [required]
     --m-metadata-file MULTIPLE PATH
                                     Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata.
                                     [required]
     --p-column TEXT                 Numeric metadata column to use as prediction
                                     target.  [required]
     --p-group-by TEXT               Categorical metadata column to use for
                                     plotting and significance testing between
                                     main treatment groups.  [required]
     --p-control TEXT                Value of group_by to use as control group.
                                     The regression model will be trained using
                                     only control group data, and the maturity
                                     scores of other groups consequently will be
                                     assessed relative to this group.  [required]
     --p-estimator [ElasticNet|Ridge|GradientBoostingRegressor|SVR|Lasso|ExtraTreesRegressor|RandomForestRegressor]
                                     Regression model to use for prediction.
                                     [default: RandomForestRegressor]
     --p-n-estimators INTEGER RANGE  Number of trees to grow for estimation. More
                                     trees will improve predictive accuracy up to
                                     a threshold level, but will also increase
                                     time and memory requirements. This parameter
                                     only affects ensemble estimators, such as
                                     Random Forest, AdaBoost, ExtraTrees, and
                                     GradientBoosting.  [default: 100]
     --p-test-size FLOAT             Fraction of input samples to exclude from
                                     training set and use for classifier testing.
                                     [default: 0.2]
     --p-step FLOAT                  If optimize_feature_selection is True, step
                                     is the percentage of features to remove at
                                     each iteration.  [default: 0.05]
     --p-cv INTEGER RANGE            Number of k-fold cross-validations to
                                     perform.  [default: 5]
     --p-random-state INTEGER        Seed used by random number generator.
                                     [optional]
     --p-n-jobs INTEGER              Number of jobs to run in parallel.
                                     [default: 1]
     --p-parameter-tuning / --p-no-parameter-tuning
                                     Automatically tune hyperparameters using
                                     random grid search.  [default: True]
     --p-optimize-feature-selection / --p-no-optimize-feature-selection
                                     Automatically optimize input feature
                                     selection using recursive feature
                                     elimination.  [default: True]
     --p-stratify / --p-no-stratify  Evenly stratify training and test data among
                                     metadata categories. If True, all values in
                                     column must match at least two samples.
                                     [default: False]
     --p-maz-stats / --p-no-maz-stats
                                     Calculate anova and pairwise tests on MAZ
                                     scores.  [default: True]
     --o-visualization VISUALIZATION PATH
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Microbial maturity index prediction.

   Calculates a "microbial maturity" index from a regression model trained on
   feature data to predict a given continuous metadata column, e.g., to
   predict age as a function of microbiota composition. The model is trained
   on a subset of control group samples, then predicts the column value for
   all samples. This visualization computes maturity index z-scores to compare
   relative "maturity" between each group, as described in
   doi:10.1038/nature13421. This method can be used to predict between-group
   differences in relative trajectory across any type of continuous metadata
   gradient, e.g., intestinal microbiome development by age, microbial
   succession during wine fermentation, or microbial community differences
   along environmental gradients, as a function of two or more different
   "treatment" groups.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       Feature table containing all features that should be used for target
       prediction.
   metadata : Metadata
   column : Str
       Numeric metadata column to use as prediction target.
   group_by : Str
       Categorical metadata column to use for plotting and significance
       testing between main treatment groups.
   control : Str
       Value of group_by to use as control group. The regression model will be
       trained using only control group data, and the maturity scores of other
       groups consequently will be assessed relative to this group.
   estimator : Str % Choices({'ElasticNet', 'ExtraTreesRegressor', 'GradientBoostingRegressor', 'Lasso', 'RandomForestRegressor', 'Ridge', 'SVR'}), optional
       Regression model to use for prediction.
   n_estimators : Int % Range(1, None), optional
       Number of trees to grow for estimation. More trees will improve
       predictive accuracy up to a threshold level, but will also increase
       time and memory requirements. This parameter only affects ensemble
       estimators, such as Random Forest, AdaBoost, ExtraTrees, and
       GradientBoosting.
   test_size : Float % Range(0.0, 1.0, inclusive_start=False), optional
       Fraction of input samples to exclude from training set and use for
       classifier testing.
   step : Float % Range(0.0, 1.0, inclusive_start=False), optional
       If optimize_feature_selection is True, step is the percentage of
       features to remove at each iteration.
   cv : Int % Range(1, None), optional
       Number of k-fold cross-validations to perform.
   random_state : Int, optional
       Seed used by random number generator.
   n_jobs : Int, optional
       Number of jobs to run in parallel.
   parameter_tuning : Bool, optional
       Automatically tune hyperparameters using random grid search.
   optimize_feature_selection : Bool, optional
       Automatically optimize input feature selection using recursive feature
       elimination.
   stratify : Bool, optional
       Evenly stratify training and test data among metadata categories. If
       True, all values in column must match at least two samples.
   maz_stats : Bool, optional
       Calculate anova and pairwise tests on MAZ scores.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>